[package]
name = "vrc-image-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
image = { version = "0.25.8" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
log = { version = "0.4.28" }
fern = { version = "0.7.1" }
chrono = { version = "0.4.41" }
notify = { version = "8.2.0" }
regex = { version = "1.11.2" }
png = { version = "0.18.0" }
image-webp = { version = "0.2.4" }
tiff = { version = "0.10.3" }
xmp_toolkit = { version = "1.12.0" }
